--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,9 +8,10 @@
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
         </div>
-        <div class="article-user">
-          <%= article.user_id %>
-        </div>
+        <small class="article-user">
+          <%= article.user.username %>, 
+          Created at : <%= time_ago_in_words(article.created_at) %> ago
+        </small>
         <div class="article-actions">
           <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
           <%= link_to "View this article", article_path(article), class: "btn btn-xs btn-success" %>
