add user signup page

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="jumbotron">
     <h2 id="w_text">Encontre o melhor coach para seu estilo de jogo</h2> 
-    <%= link_to "Cadastre-se ja", "#", class: "btn btn-primary btn-large" %>
+    <%= link_to "Cadastre-se ja", signup_path, class: "btn btn-primary btn-large" %>
   </div>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
