--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,4 @@
-<% if @article.errors.any? %>
-<div class="alert alert-warning" role="alert">
-    
-    <h2> Error that prevented the article of being created </h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-      <% end %>
-    </ul>
-</div>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class="row">
     <div class="col-sm-10 col-sm-offset-2">
