--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,5 @@
 <%= render 'shared/errors', obj: @article %>
 
-<div class="row">
-    <div class="col-sm-10 col-sm-offset-2">
         <%= form_for(@article, :html => { class: "form-horizontal", role: "form" }) do |f|  %>
             <div class="form-group">
                     <div class="control-label col-sm-2">
@@ -21,7 +19,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-12">
-                    <%= f.submit class: 'btn btn-primary btn-lg' %>
+                    <%= f.submit class: 'btn btn-default btn-lg' %>
                 </div>
             </div>
                 
@@ -31,6 +29,3 @@
         
         
         <% end %>
-
-    </div>
-</div>
