--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,10 @@
-<h1 align="center">Create an article</h1>
-
-<%= render 'form' %>
+<div class="container">
+    <div class="panel panel-default">
+      <div align="center" class="panel-heading">
+          <h1 class="panel-title">Create an Article</h1>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+    </div>
+</div>
