--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
     <h2 id="w_text">Encontre o melhor coach para seu estilo de jogo</h2> 
     <%= link_to "Cadastre-se ja", signup_path, class: "btn btn-primary btn-large" %>
   </div>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <%= link_to "E-coach", root_path, class: "navbar-brand" %>
@@ -11,9 +11,10 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Artigos", articles_path %></li>
         <li><%= link_to "Novo Artigo", new_article_path %></li>
-        <li><a href="#"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li class="disabled"><a href="#"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></li>
+        <li class="disabled"><a href="#">Page 3</a></li>
       </ul>
+      <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">Vinicius Souza</a></p>
     </div>
   </nav> 
 </div>
