Add pagination to articles and users.articles

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,15 @@
-<div class="container">
-    <div class="panel panel-default">
-      <div align="center" class="panel-heading">
-          <h1 class="panel-title">Edit your profile</h1>
-      </div>
-      <div class="panel-body">
-        <%= render 'form' %>
-      </div>
+<div class="col-sm-12">
+    <div class="col-sm-2">
+        <%= render "user_panel" %>
+    </div>
+    <div class="col-sm-10">
+        <div class="panel panel-default">
+           <div align="center" class="panel-heading">
+               <h1 class="panel-title">Edit your profile</h1>
+            </div>
+            <div class="panel-body">
+              <%= render 'form' %>
+            </div>
+        </div>      
     </div>
 </div>
