--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,6 @@
+<div align="center">
+  <%= will_paginate %>
+</div>
 <% @articles.each do |article| %>
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
@@ -23,3 +26,6 @@
     </div>
   </div>
 <% end %>
+<div align="center">
+  <%= will_paginate %>
+</div>
