--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="col-sm-12">
     <div class="footer">
         <small>
             Copyrights &copy; - Vinicius Souza
