--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,9 +9,9 @@
         <%= link_to "E-coach", root_path, class: "navbar-brand" %>
       </div>
       <ul class="nav navbar-nav">
-        <li><%= link_to "Artigos", articles_path %></li>
-        <li><%= link_to "Novo Artigo", new_article_path %></li>
-        <li class="disabled"><a href="#"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></li>
+        <li><%= link_to "Articles", articles_path %></li>
+        <li><%= link_to "New Article", new_article_path %></li>
+        <li><%= link_to "Users", users_path %></li>
         <li class="disabled"><a href="#">Page 3</a></li>
       </ul>
       <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">Vinicius Souza</a></p>
