--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,39 +1,41 @@
+<div class="container">
 <%= render 'shared/errors', obj: @user %>
 
-        <%= form_for(@user, :html => { class: "form-horizontal", role: "form" }) do |f|  %>
-            <div class="form-group">
-                    <div class="control-label col-sm-2">
-                        <%= f.label :username %>
-                    </div>
-                    <div class="col-sm-6">
-                        <%= f.text_field :username, class: "form-control", placeholder: "Enter your username"  %>
-                    </div>
+<%= form_for(@user, :html => { class: "form-horizontal", role: "form" }) do |f|  %>
+    <div class="form-group">
+            <div class="control-label col-sm-2">
+                <%= f.label :username %>
             </div>
-            <div class="form-group">
-                    <div class="control-label col-sm-2">
-                        <%= f.label :email %>
-                    </div>
-                    <div class="col-sm-6">
-                        <%= f.email_field :email, class: "form-control", placeholder: "Enter your email"  %>
-                    </div>
+            <div class="col-sm-6">
+                <%= f.text_field :username, class: "form-control", placeholder: "Enter your username"  %>
             </div>
-            <div class="form-group">
-                    <div class="control-label col-sm-2">
-                        <%= f.label :password %>
-                    </div>
-                    <div class="col-sm-6">
-                        <%= f.password_field :password, class: "form-control", placeholder: "Enter your password"  %>
-                    </div>
+    </div>
+    <div class="form-group">
+            <div class="control-label col-sm-2">
+                <%= f.label :email %>
             </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-12">
-                    <%= f.submit(@user.new_record? ? "Signup" : "Update account", class: 'btn btn-primary btn-lg') %>
-                </div>
+            <div class="col-sm-6">
+                <%= f.email_field :email, class: "form-control", placeholder: "Enter your email"  %>
             </div>
-                
-            <div class="col-sm-offset-4 col-sm-8">
-                <%= link_to "| Cancel creation and go back |", articles_path, class: "btn btn-xs btn-danger" %>
+    </div>
+    <div class="form-group">
+            <div class="control-label col-sm-2">
+                <%= f.label :password %>
             </div>
+            <div class="col-sm-6">
+                <%= f.password_field :password, class: "form-control", placeholder: "Enter your password"  %>
+            </div>
+    </div>
+    <div class="form-group">
+        <div class=" col-sm-10 col-sm-offset-2">
+            <%= f.submit(@user.new_record? ? "Signup" : "Update account", class: 'btn btn-primary btn-lg') %>
+        </div>
+    </div>
         
-        
-        <% end %>
+    <div class="col-sm-offset-4 col-sm-8">
+        <%= link_to "| Cancel creation and go back |", articles_path, class: "btn btn-xs btn-danger" %>
+    </div>
+
+
+<% end %>
+</div>
