--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,10 @@
-<% flash.each do |name, msg| %>
-<div class="alert alert-success" role="alert">
-    <ul>
-      <li><%= msg %></li>
-    </ul>
+<div class="row">
+  <div  class="col-sm-10 col-sm-offset-1">
+    <% flash.each do |name, msg| %>
+      <div class='alert alert-<%="#{name}"%>'>
+        <a href="#" class= "close" data-dismiss= "alert">&#215;</a>
+        <%= content_tag :siv, msg, :id => "flash#{name}" if msg.is_a?(String) %>
+      </div>
+    <% end %>    
+  </div>
 </div>
-<% end %>
