--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,11 @@
             <div class="list-group-item">
                 <%= link_to gravatar_for(user), user_path(user)%>
                 <%= link_to user.username, user_path(user) %>
+                <% if logged_in? and current_user.admin? %>
+                    <%= link_to "Delete User", user_path(user), method: :delete,
+                                            data: { confirm: "Are you sure you want to delete #{user.username}?" },
+                                            class: "btn btn-danger btn-xs"%>
+                <% end %>
             </div>
             <% end %>  
         </div>
