--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,6 +18,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
+          <% if current_user.admin?  %>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "List", categories_path %></li>
+                <li><%= link_to "New", new_category_path %></li>
+              </ul>
+            </li>
+          <% end %>
           <li><%= link_to "Profile", user_path(current_user) %></li>
           <li><%= link_to "Logout", logout_path, method: :delete %></li>
         <% else %>
