--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,13 +23,20 @@
     float: right;
 }
 
+.article-list {
+    padding-top: 0%;
+    margin-top: 0%;
+    
+}
+
 .article-actions {
-    border-top: 1px solid #eaeaea;
-    padding-top: 1%;
+    float: left;
 }
 
 .article-title {
     text-align: center;
+    padding-top: 0%;
+    margin-top: 0%;
     
 }
 
@@ -37,9 +44,22 @@
     border-top: 1px solid #eaeaea;
     padding-top: 1%;
     margin-top: 1%;
-    margin-bottom: 1%;
     
 }
 .article-user {
     float: right;
+}
+
+
+.article-categories {
+    float: left;
+}
+
+.article-details {
+    border-top: 1px solid #eaeaea;
+    padding-top: 0.5%;
+}
+
+.label a {
+     text-decoration: none;
 }
