--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,24 +4,31 @@
 <% @articles.each do |article| %>
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <div class="well well-lg">
+      <div class="well well-lg article-list">
         <div class="article-title">
+          <div class="article-categories">
+            <% if article.categories.any? %>
+              <%= render article.categories %>
+            <% end %>
+          </div>
           <h3><%= link_to article.title, article_path(article) %></h3>
         </div>
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
         </div>
-        <small class="article-user">
-          <%= article.user.username %>, 
-          Created at : <%= time_ago_in_words(article.created_at) %> ago
-        </small>
-        <% if logged_in? && (current_user == article.user || current_user.admin?) %>
-          <div class="article-actions">
-              <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-              <%= link_to "Delete this article", article_path(article), method: :delete,
-                                                                       data: {confirm:"Are you sure you want to delete this article?"},
-                                                                       class: "btn btn-xs btn-danger"%>
-          </div>
+        <div class="article-details">
+          <small class="article-user">
+            <%= article.user.username %>, 
+            Created at : <%= time_ago_in_words(article.created_at) %> ago
+          </small>
+          <% if logged_in? && (current_user == article.user || current_user.admin?) %>
+            <div class="article-actions">
+                <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+                <%= link_to "Delete this article", article_path(article), method: :delete,
+                                                                         data: {confirm:"Are you sure you want to delete this article?"},
+                                                                         class: "btn btn-xs btn-danger"%>
+            </div>
+        </div>
         <% end %>
       </div>
     </div>
