--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,22 +1,33 @@
 <div class="container">
     <div class="panel panel-default">
       <div align="center" class="panel-heading">
+          <div class="article-categories">
+            <% if @article.categories.any? %>
+              <%= render @article.categories %>
+            <% end %>
+          </div>
           <h1 class="panel-title">
               <%= @article.title %>
           </h1>
       </div>
       <div class="panel-body">
         <%= @article.description  %>
-        <div class="article-actions">
-          <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-            <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    
-            <%= link_to "Delete this article", article_path(@article), method: :delete,
-                                                                   data: {confirm:"Are you sure you want to delete this article?"},
-                                                                   class: "btn btn-xs btn-danger"%>
-          <% end %>
-          <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
-        </div>        
+        <div class="article-details">
+          <small class="article-user">
+            <%= @article.user.username %>, 
+            Created at : <%= time_ago_in_words(@article.created_at) %> ago
+          </small>
+          <div class="article-actions">
+            <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+              <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      
+              <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                                                     data: {confirm:"Are you sure you want to delete this article?"},
+                                                                     class: "btn btn-xs btn-danger"%>
+            <% end %>
+            <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+          </div>
+        </div>
       </div>
     </div>
 </div>
